# minimal_gpt

./: .gitignore  README.md  llama_from_scratch.ipynb  pyproject.toml
